贪吃蛇，优化path调用